parrafo extra y cambio de color de fondo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Voy a hacerlo bastante simple</h1>
     <p>agregando un parrafo</p>
+    <p>Agrego un parrafo mas y le cambio el color al fondo</p>
 </body>
 </html>
