Converti el codigo en un cajero

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Voy a hacerlo bastante simple</h1>
-    <p>agregando un parrafo</p>
-    <p>Agrego un parrafo mas y le cambio el color al fondo</p>
+    <img src="../documentitos/cajero2/cajero/cajero.png" alt="">
+    <input type="text" id="cantidad">
+    <input type="button" value="" id="botoncito" >
+    <p id="respuesta"></p>
 </body>
 </html>
