agregando imagen de cajero

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <input type="text" id="cantidad">
     <input type="button" value="" id="botoncito" >
     <p id="respuesta"></p>
+    <script src="codigo.js"></script>
 </body>
 </html>
