agregado el cajero

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="../documentitos/cajero2/cajero/cajero.png" alt="">
+    <img src="cajero.png" alt="">
     <input type="text" id="cantidad">
     <input type="button" value="" id="botoncito" >
     <p id="respuesta"></p>
