--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="cajero.png" alt="">
-    <input type="text" id="cantidad">
-    <input type="button" value="" id="botoncito" >
+    <img src="cajero.png" alt=""><br>
+    <input type="text" id="cantidad"><br>
+    <input type="button" value="Extraer" id="botoncito" ><br>
     <p id="respuesta"></p>
     <script src="codigo.js"></script>
 </body>
