--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <title>Document</title>
 </head>
 <body>
+<header>
+    <h1>Bienvenido! extrae tu dinero!</h1>
+</header>
+
     <img src="cajero.png" alt=""><br>
     <input type="text" id="cantidad"><br>
     <input type="button" value="Extraer" id="botoncito" ><br>
     <p id="respuesta"></p>
     <script src="codigo.js"></script>
+
+
+
 </body>
+
 </html>
