--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <input type="button" value="Extraer" id="botoncito" ><br>
     <p id="respuesta"></p>
     <script src="codigo.js"></script>
+    <footer>
+        <p>Espero te hayamos sido de mucha ayuda!</p>
+    </footer>
 </body>
 </html>
